# stariler

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  go.mod
.github/workflows/: CI.yml
cmd/dev/: main.go
cmd/dev/cmd/: init.go  root.go
cmd/init/: main.go
cmd/star/: main.go
crates/apps/star/: Cargo.toml
crates/apps/star/src/: cli.rs  main.rs
crates/libs/stariler/: Cargo.toml
crates/libs/stariler/src/: core.rs  data.rs  input.rs  lexer.rs  lib.rs  processing.rs  tokenize.rs  tsconfig.rs  util.rs
crates/tools/dev/: Cargo.toml
crates/tools/dev/src/: main.rs
docs/: dev.md
internal/pkg/star/cmd/: root.go
references/sample/: package-lock.json  package.json  tsconfig.json
references/sample/src/: index.ts
