[package]
name = "star"
description = "TypeScript compiler CLI tool."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
