[package]
name = "stariler"
description = "TypeScript compiler library written in Rust."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
] }
glob = "0.3.1"
lazy_static = "1.4.0"
